--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ python = "^3.9"
 Sphinx = {version = "^5.0", optional = true}
 sphinx-rtd-theme = {version = "^1.0", optional = true}
 myst-parser = {version = "^0.18", optional = true}
+bluetooth-sensor-state-data = ">=1.6.0"
 
 [tool.poetry.extras]
 docs = [
