--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ Sphinx = {version = "^5.0", optional = true}
 sphinx-rtd-theme = {version = "^1.0", optional = true}
 myst-parser = {version = "^0.18", optional = true}
 bluetooth-sensor-state-data = ">=1.6.0"
+bluetooth-data-tools = ">=0.1.2"
+home-assistant-bluetooth = ">=1.6.0"
 
 [tool.poetry.extras]
 docs = [
