feat: added test for polling
test for various stages of brushing for polling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ bluetooth-data-tools = ">=0.1.2"
 bleak = ">=0.19.2"
 home-assistant-bluetooth = ">=1.6.0"
 bleak-retry-connector = ">=2.13.0"
+pytest-asyncio = "^0.20.3"
+mock = "^5.0.1"
 
 [tool.poetry.extras]
 docs = [
