--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,11 @@ sphinx-rtd-theme = {version = "^1.0", optional = true}
 myst-parser = {version = "^0.18", optional = true}
 bluetooth-sensor-state-data = ">=1.6.0"
 bluetooth-data-tools = ">=0.1.2"
+bleak = ">=0.19.2"
 home-assistant-bluetooth = ">=1.6.0"
+bleak-retry-connector = ">=2.13.0"
+pytest-asyncio = "^0.20.3"
+mock = "^5.0.1"
 
 [tool.poetry.extras]
 docs = [
